welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:13: error: not found: type YELLOW
setCouleurBrosse(c:YELLOW)
                   ^FlowerPot:13: error: not found: value c
setCouleurBrosse(c:YELLOW)
                 ^